[gd_scene load_steps=5 format=3 uid="uid://craawda1yun5y"]

[ext_resource type="Script" uid="uid://b4pdwtu5ymmil" path="res://BrainVisualizer/UI/Windows/CreateCorticalArea/Parts/PartSpawnCorticalAreaIOPU.gd" id="1_ucbj0"]
[ext_resource type="Script" uid="uid://dqsvtxw1or7ux" path="res://BrainVisualizer/UI/GenericElements/DropDown/TemplateDropDown.gd" id="2_hm4ef"]
[ext_resource type="Texture2D" uid="uid://io0bj7fr2e5b" path="res://BrainVisualizer/UI/GenericResources/CorticalAreaIcons/knowns/i__inf.png" id="4_1tced"]
[ext_resource type="PackedScene" uid="uid://ci8uvawjvxfax" path="res://BrainVisualizer/UI/GenericElements/Vectors/Vector3iSpinBoxField.tscn" id="6_yjcxe"]

[node name="Definition_IOPU" type="VBoxContainer"]
offset_right = 489.0
offset_bottom = 117.0
theme_type_variation = &"VBoxContainer_farther"
script = ExtResource("1_ucbj0")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TopLabels" type="VBoxContainer" parent="HBoxContainer2"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2/TopLabels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Device Type:"
vertical_alignment = 1

[node name="TopSection" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TemplateDropDown" type="OptionButton" parent="HBoxContainer2/TopSection"]
layout_mode = 2
size_flags_vertical = 3
fit_to_longest_item = false
script = ExtResource("2_hm4ef")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2
theme_type_variation = &"VBoxContainer_farther"

[node name="Label" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Device Count:"
vertical_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 3
text = "Location:"
vertical_alignment = 1

[node name="Fields" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"VBoxContainer_farther"

[node name="ChannelCount" type="SpinBox" parent="HBoxContainer/Fields"]
layout_mode = 2
max_value = 1e+10
value = 1.0
alignment = 1

[node name="Location" parent="HBoxContainer/Fields" instance=ExtResource("6_yjcxe")]
layout_mode = 2
initial_vector = Vector3i(40, 0, 0)

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_1tced")
expand_mode = 2

[connection signal="template_picked" from="HBoxContainer2/TopSection/TemplateDropDown" to="." method="_drop_down_changed"]
[connection signal="value_changed" from="HBoxContainer/Fields/ChannelCount" to="." method="_proxy_device_count_changes"]
